--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                <img src="./images/qr.svg" alt="" width="130" height="130">
            </div>
 
-
+    <footer>tugadi</footer>
 
      </div>
   </div>
