--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
   </div>
 </main>
 <footer>tugadi tugadi tugadi</footer>
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis, recusandae pariatur. Consectetur, ullam officia. Mollitia sint quae iste molestiae, adipisci voluptates exercitationem voluptatem perspiciatis, dicta quo sit odit eos? Debitis?
 </body>
 </html>
